# gtestExamples

./: CMakeLists.txt  README.md
lifeIsHard/: CMakeLists.txt
lifeIsHard/mockFreeFunction/: CMakeLists.txt  CaesarDeciphering.cpp  CaesarDeciphering.h  CaesarDecipheringWithInterface.cpp  CaesarDecipheringWithInterface.h  README.md  mockFreeFunctionUnitTest.cpp  mockFreeFunctionWithInterfaceUnitTest.cpp  resources.h
parametricTests/: CMakeLists.txt  OperationsUnitTest.cpp  RingOperations.h  main.cpp
parametricTests/unittest/: AppUnitTestMain.cpp  CMakeLists.txt  OperationsTypeParamUnitTest.cpp  OperationsUnitTest.cpp  OperationsValueParamUnitTest.cpp
testDoubles/: CMakeLists.txt  ClosableObject.h  DBConnection.h  DBMain.cpp  DBclass.h  Door.h  Security.h  SecurityMain.cpp  Window.h
testDoubles/unittest/: CMakeLists.txt  DBDummyUnitTest.cpp  DBFakeUnitTest.cpp  DBStubAndSpyUnitTest.cpp  SecurityMockUnitTest.cpp
